--- a/index.html
+++ b/index.html
@@ -1,79 +1,69 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Bakery : Smells Like Bakin&#39;" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Bakery</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/tihuan/Bakery">View on GitHub</a>
-
-          <h1 id="project_title">Bakery</h1>
-          <h2 id="project_tagline">Smells Like Bakin&#39;</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/tihuan/Bakery/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/tihuan/Bakery/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Smells Like Bakin' Cupcake Company</title>
+  <link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
+  <link href='http://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+</head>
+<body>
+  <div class="container clearfix">
+    <div class="grid_4">
+      <img src="img/logo.gif" alt="Smells Like Bakin">
+    </div>
+    <div class="grid_8 omega">
+      <ul class="nav">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Cupcakes &amp; Prices</a></li>
+        <li><a href="#">Locations</a></li>
+        <li class="last"><a href="#">Contact Us</a></li>
+      </ul>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
+    <div id="intro" class="grid_9">
+      <h1>Opposite really do attract, especially in our kitchen! We combine unexpected flavors ...</h1>
+      <p><a href="#" class="btn">Browse Our Cupcakes</a></p>
+    </div>
+    <div class="grid_3 omega">
+      <img src="img/you-bake-me-blush.gif" alt="You Bake Me Blush">
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Bakery maintained by <a href="https://github.com/tihuan">tihuan</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
+    <div id="featured-cupcake" class="grid_7">
+      <h2>Cupcake of the Week</h2>
+      <p>This week's featured cupcake is <a href="#">Avocado Chocolate cupcake</a>. It's a strange combo.</p>
+      <img src="img/featured-cupcake.jpg" alt="Avochoco">
+    </div>
+    <div id="new-cupcakes" class="grid_5 omega">
+      <h2>Fresh Out the Oven</h2>
+      <p>Our newest cupcakes are Bacon Me Crazy and Jalapeno Spicy!</p>
+      <img src="img/new-cupcake-bacon.jpg" alt="Bacon Me Crazy">
+      <img src="img/new-cupcake-jalapeno.jpg" alt="Jalapeno So Spicy">
+    </div>
+    <div class="grid_7">
+      <h2>Inside the Kitchen</h2>
+      <p>Smells Like Bakin' started in the grage of the husband wife duo Allison &amp; Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tasty treats.</p>
+      <p><a href="#" class="btn-small">Read More</a></p>
     </div>
 
-    
+    <div class="grid_5 omega">
+      <h2>Get Bakin' with Us</h2>
 
-  </body>
-</html>
+      <div id="contact">
+        <p>Call us: <span>1-555-CUP-CAKE</span><br>
+        Email us: <a href="#">bakeon@smellslikebakin.com</a></p>
+      </div>
+
+      <p>We announce all of our new flavors first through Facebook &amp; Twitter, and even take requests!</p>
+      <a href="#"><img src="img/facebook.gif" alt="Facebook"></a>
+      <a href="#"><img src="img/twitter.gif" alt="Twitter"></a>
+    </div>
+
+    <div id="copyright" class="grid_12">
+      <p>&copy; 2014 Smells Like Bakin' Cupcake Company. All Rights Reserved.</p>
+    </div>
+
+
+  </div>
+</body>
