Add link to homepage on logo

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="container clearfix">
     <div class="grid_4">
-      <img src="img/logo.gif" alt="Smells Like Bakin">
-    </div>
+      <a href="/index"><img src="img/logo.gif" alt="Smells Like Bakin">
+    </div></a>
     <div class="grid_8 omega">
       <ul class="nav">
         <li><a href="#">About</a></li>
